--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,28 @@
 {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "python.analysis.autoImportCompletions": true,
     "python.analysis.typeCheckingMode": "basic",
-    "pylint.args": ["--max-line-length=120"]
+    "pylint.args": [
+        "--max-line-length=120"
+    ],
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#037fa2",
+        "activityBar.background": "#037fa2",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#fd82e2",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#037fa2",
+        "statusBar.background": "#025870",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#037fa2",
+        "statusBarItem.remoteBackground": "#025870",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#025870",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#02587099",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.color": "#025870"
 }
