--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,9 @@
     },
     "peacock.color": "#025870",
     "cSpell.words": [
+        "ASGI",
         "chromedriver",
+        "taskform",
         "taskkill"
     ],
     "python.testing.unittestArgs": [
