--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,8 @@
     "cSpell.words": [
         "ASGI",
         "chromedriver",
+        "csrfmiddlewaretoken",
+        "csrftoken",
         "taskform",
         "taskkill"
     ],
