updated and fixed algorithm_visualizer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
         "chromedriver",
         "csrfmiddlewaretoken",
         "csrftoken",
+        "Pygame",
         "taskform",
         "taskkill"
     ],
