--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,7 +41,10 @@
         "-p",
         "*test.py"
     ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true,
-    "liveServer.settings.port": 5501
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
+    "liveServer.settings.port": 5501,
+    "python.testing.pytestArgs": [
+        "Sandbox"
+    ]
 }
